--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
 }
 body{
+    display: flex; 
+    justify-content: center;
+    align-items:flex-start;
     height: 100vh;
     background-image: linear-gradient(to bottom right,rgb(4, 59, 2),black);
 }
@@ -12,7 +15,7 @@ body{
     width: 450px;
     height: auto;
     padding-bottom: 50px;
-    margin: 100px 500px;
+    margin: 100px ;
     border-radius: 20px;
     text-align: center;
     color: aliceblue;
